[tool.poetry]
name = "app-fastapi"
version = "0.1.0"
description = ""
authors = ["vladimirogulo <vovandrex@gmail.com>"]
readme = "README.md"
packages = [{include = "app_fastapi"}]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.18.3"
fastapi = "^0.81.0"
pydantic = "^1.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
